Fix: collection in AvaliacaoRevisaoDTO